force-app/main/default/objects/Media__c/Media__c.object-meta.xml
<CustomObject>
    <label>Media</label>
    <nameField>
        <displayFormat>MEDIA-{00000}</displayFormat>
        <label>Media ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>