force-app/main/default/objects/Media__c/fields/ButtonText__c.field-meta.xml
<CustomField>
    <fullName>ButtonText__c</fullName>
    <label>Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>