force-app/main/default/objects/Media__c/fields/ButtonUrl__c.field-meta.xml
<CustomField>
    <fullName>ButtonUrl__c</fullName>
    <label>Button Url</label>
    <type>Url</type>
</CustomField>