force-app/main/default/objects/Media__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Course Detail</fullName>
            </value>
            <value>
                <fullName>Course List</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Booking Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>