force-app/main/default/objects/Media__c/fields/PublicUrl__c.field-meta.xml
<CustomField>
    <fullName>PublicUrl__c</fullName>
    <label>Public Url</label>
    <type>Url</type>
</CustomField>