force-app/main/default/objects/Media__c/fields/Subheading__c.field-meta.xml
<CustomField>
    <fullName>Subheading__c</fullName>
    <label>Subheading</label>
    <length>768</length>
    <type>LongTextArea</type>
</CustomField>