force-app/main/default/objects/Media__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Heading__c</columns>
    <columns>ButtonText__c</columns>
    <columns>Media_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>